# insanely-fast-whisper-rocm

./: .coderabbit.yaml  .dockerignore  .env  .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.v2  LICENSE  Makefile  README.md  VERSIONS.md  app.py  constraints-no-heavy.txt  convert_output.py  docker-compose-dev.yaml.bak  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  insanely-fast-whisper.py  main.py  openapi.yaml  project-overview.md  pylintrc  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-flash-attn.txt  requirements-onnxruntime-rocm.txt  requirements-reviewer.txt  requirements-rocm-v6-4-1.txt  requirements-rocm-v7-0.txt  requirements-rocm-v7-1.txt  requirements-rocm.txt  requirements-torch-rocm.txt  (+3 more)
.github/PULL_REQUEST/: pr-feat-model-caching-merge.md  pr-feat-v0.10.0-release-merge.md  pr-fix-merge-dev-into-main-merge.md  pr-refactor-dev-main-merge.md  pr-refactor-modular-refactor-merge.md
.github/workflows/: codeql.yml  osv-scanner.yml
.windsurf/rules/: codebase-scan.md  testing.md  to-do.md
.windsurf/workflows/: codebase-scan.md  pull-requests.md  srt-benchmark.md  validate-checked-tasks.md  working-on-todos.md
config/: __init__.py  logging_config.py  settings.py
insanely_fast_whisper_api/: __init__.py  __main__.py  logging_config.yaml  main.py
insanely_fast_whisper_api/api/: __init__.py  __main__.py  app.py  dependencies.py  middleware.py  models.py  responses.py  routes.py
insanely_fast_whisper_api/audio/: __init__.py  conversion.py  processing.py  results.py
insanely_fast_whisper_api/benchmarks/: __init__.py  collector.py
insanely_fast_whisper_api/cli/: __init__.py  __main__.py  cli.py  commands.py  common_options.py  errors.py  facade.py  progress_rich.py  progress_tqdm.py
insanely_fast_whisper_api/core/: __init__.py  asr_backend.py  backend_cache.py  cancellation.py  errors.py  formatters.py  pipeline.py  segmentation.py  storage.py  utils.py
insanely_fast_whisper_api/utils/: __init__.py  benchmark.py  constants.py  download_hf_model.py  env_loader.py  file_utils.py  filename_generator.py  formatting.py  srt_quality.py
insanely_fast_whisper_api/webui/: __init__.py  __main__.py  app.py  cli.py  errors.py  formatters.py  handlers.py  merge_handler.py  ui.py  utils.py  zip_creator.py
insanely_fast_whisper_rocm/: __init__.py  __main__.py  logging_config.yaml  main.py
insanely_fast_whisper_rocm/api/: __init__.py  __main__.py  app.py  dependencies.py  middleware.py  models.py  responses.py  routes.py
insanely_fast_whisper_rocm/audio/: __init__.py  conversion.py  processing.py  results.py
insanely_fast_whisper_rocm/benchmarks/: __init__.py  collector.py
insanely_fast_whisper_rocm/cli/: __main__.py  cli.py  commands.py  common_options.py  errors.py  facade.py  progress_tqdm.py
insanely_fast_whisper_rocm/core/: __init__.py  asr_backend.py  backend_cache.py  cancellation.py  errors.py  formatters.py  oom_utils.py  orchestrator.py  pipeline.py  progress.py  segmentation.py  storage.py  utils.py
insanely_fast_whisper_rocm/utils/: __init__.py  benchmark.py  constants.py  download_hf_model.py  env_loader.py  file_utils.py  filename_generator.py  format_time.py  formatting.py  srt_quality.py  timestamp_utils.py
scripts/: __init__.py  benchmark.sh  clean_benchmark.sh  clean_codebase.sh  clean_codebase_sorted.sh  cli.py  compare_benchmarks.sh  convert_json_to_txt_srt.py  exa_codebase_tree.sh  hf_models.py  local-ci.sh  mww.sh  setup_config.py
src/: __init__.py  app.py  convert_output.py  main.py
testing/: entrypoint.py  entrypoint.sh  main.py  mp3_test_insanely_fast_whisper.sh  test_cuda.py  test_insanely_fast_whisper.sh
tests/: __init__.py  conftest.py  helpers.py  logs.txt  test.txt  test_api.py  test_api.sh  test_api_integration.py  test_api_modules.py  test_api_short.sh  test_app_startup_event.py  test_asr_backend_generation_config.py  test_asr_backend_timestamp.py  test_asr_pipeline.py  test_audio_conversion.py  test_audio_processing.py  test_audio_results.py  test_centralized_configuration.py  test_cli.py  test_cli_exports.py  test_cli_output_benchmarks.py  test_core.py  test_cuda.py  test_dependencies.py  test_download_hf_model.py  test_filename_generator.py  test_force_coverage.py  test_force_coverage.py.bak  test_init.py  test_main_function.py  test_main_load_logging_config.py  test_main_setup_timezone.py  test_models.py  test_progress_tqdm.py  test_response_formats.py  test_responses.py  test_routes.py  test_setup_config.py  test_srt_vtt_timestamp_formats.py  test_stable_ts.py  (+3 more)
to-do/: add-debug-logging-segmentation-pipeline.md  add-m4a-audio-support.md  add-translate-cli-command.md  add-txt-srt-flags-cli.md  analyze-openapi-transcription-output-latest-test-summary.md  analyze-openapi-transcription-output.md  audio_chunking_feature.md  benchmark-analysis-word-level.md  centralize-environment-variables.md  code-quality-improvements.md  compare-core-to-original.md  consolidated-analysis.md  debug-webui-download-buttons.md  design-patterns-for-testability.md  docker-compose-webui-cli.md  dockerize_application.md  enhance-api-server-cli.md  feasibility-check-add-txt-srt-flags-cli-v1.md  feasibility-check-restructure_project-v1.md  feasibility-check-restructure_project-v2.md  feasibility-check-restructure_project-v3.md  fix-audio-chunking-typeerror.md  fix-backend-cache-resource-cleanup.md  fix-pylint-findings-webui.md  fix_gradio_downloadbutton_typeerror.md  fix_zip_overwrite_issue.md  hf-model-download-script.md  implement-better-transformer.md  implement-env-loading-logic.md  implement-progress-callback-mechanism.md  integrate-stable-ts-for-timestamp-enhancement.md  pdm-dependency-management.md  performance-monitoring.md  port-webui-tests-to-gradio-client.md  project-v0.2.0.md  pylint-code-quality-fixes.md  refactor-codebase-pep8-standards.md  refactor-codebase-standards.md  refactor-entrypoints.md  refactor-files-separate-concerns.md  (+23 more)
transcripts/: MoA_Groq-The_Ultimate_LLM_Architecture.txt
(+99 files in other folders)
