[project]
name = "insanely-fast-whisper-rocm"
version = "2.1.5"
description = "A FastAPI wrapper around a custom Whisper-based ASR pipeline (ROCM version)"
requires-python = "~=3.10"
authors = [
    {name = "elvee"},
]
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-multipart==0.0.22",
    "transformers==4.57.3",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "click==8.3.1",
    "gradio==5.50.0",
    "pydub==0.25.1",
    "numpy==2.2.6",
    "datasets==4.4.2",
    "accelerate==1.12.0",
    "optimum==2.1.0",
    "ffmpeg-python==0.2.0",
    "stable-ts==2.19.1",
    "demucs==4.0.1",
    "huggingface-hub==0.36.0",
    "soundfile==0.13.1",
    "sniffio==1.3.1",
]


[project.scripts]
insanely-fast-whisper-cli = "insanely_fast_whisper_rocm.cli.cli:main"
insanely-fast-whisper-webui = "insanely_fast_whisper_rocm.webui.app:launch_webui"
insanely-fast-whisper-rocm = "insanely_fast_whisper_rocm.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true


[tool.pdm]
distribution = true


[tool.pdm.scripts]
webui = "insanely-fast-whisper-webui"
webui-debug = "insanely-fast-whisper-webui --debug"
api = "insanely-fast-whisper-rocm"
api-debug = "insanely-fast-whisper-rocm -v"
cli = "insanely-fast-whisper-cli"

setup-config = {call = "scripts.setup_config:main"}
hf-models = {call = "scripts.hf_models:_main"}

lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
test = "pytest -q"
test-cov = "pytest --cov=insanely_fast_whisper_rocm --cov-report=term-missing:skip-covered --cov-report=xml"

local-ci = "scripts/local-ci.sh"


[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple/"
verify_ssl = true
type = "index"
exclude_packages = ["torch", "torchaudio", "onnxruntime-rocm", "pytorch-triton-rocm", "triton", "nvidia-*"]
include_packages = ["*"]


[[tool.pdm.source]]
name = "rocm-wheels-6.4.1"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4.1/"
verify_ssl = true
type = "find_links"
include_packages = ["torch", "torchaudio", "onnxruntime-rocm", "pytorch-triton-rocm", "triton"]

[[tool.pdm.source]]
name = "rocm-wheels-7.0"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.0/"
verify_ssl = true
type = "find_links"
include_packages = ["torch", "torchaudio", "onnxruntime-rocm", "pytorch-triton-rocm", "triton"]


[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "types-PyYAML>=6.0.12.20250915",
    "typing-extensions>=4.15.0",
    "docstr-coverage>=2.3.2",
    "interrogate>=1.7.0",
]

# Should allow version from rocm-wheels-6.4.1 and rocm-wheels-7.0
rocm-6-4-1 = [
    # "torch==2.7.1+rocm6.4.1",
    "torch==2.6.0+rocm6.4.1.git1ded221d",
    # "torchaudio==2.7.1+rocm6.4.1",
    "torchaudio==2.6.0+rocm6.4.1.gitd8831425",
    "onnxruntime-rocm==1.22.2.post1",
    "pytorch-triton-rocm==3.3.1",
]
rocm-7-0 = [
    # Pin to the full ROCm wheel (avoid the smaller *.lw build for docker containers).
    "torch==2.8.0+rocm7.0.0.git64359f59",
    "torchaudio==2.8.0+rocm7.0.0.git6e1c7fe9",
    "onnxruntime-rocm==1.22.1",
    "pytorch-triton-rocm==3.4.0",
]

# Tool configurations for development
bench = [
    "pyamdgpuinfo==2.1.7",
]

# Benchmark different torch versions
# bench-torch-2-0-1 = [
#     "torch==2.0.1",
#     "torchaudio==2.0.1",
# ]
# bench-torch-2-3-0 = [
#     "torch==2.3.0",
#     "torchaudio==2.3.0",
# ]
# bench-torch-2-4-1 = [
#     "torch==2.4.1",
#     "torchaudio==2.4.1",
# ]
# bench-torch-2-6-0 = [
#     "torch==2.6.0",
#     "torchaudio==2.6.0",
# ]
# bench-torch-2-7-1 = [
#     "torch==2.7.1",
#     "torchaudio==2.7.1",
# ]
# bench-torch-2-8-0 = [
#     "torch==2.8.0",
#     "torchaudio==2.8.0",
# ]
# bench-torch-2-9-1 = [
#     "torch==2.9.1",
#     "torchaudio==2.9.0",
# ]


[tool.pdm.resolution]
excludes = ["torch==2.0.1", "torch==2.3.0", "torch==2.4.1", "torch==2.7.1"]

# ------------------------------
#   Ruff (linter + formatter)
# ------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"                # adjust if you target 3.9/3.12
preview = true                          # needed for DOC + FA rules
src = ["insanely_fast_whisper_rocm"]     # first-party package path


[tool.ruff.lint]
select = [
  "F",      # Pyflakes (includes F403/F405 for wildcard imports)
  "E", "W", # pycodestyle subset (PEP 8 basics)
  "N",      # pep8-naming (snake_case, PascalCase)
  "I",      # isort (import sorting)
  "D",      # pydocstyle (docstring presence + Google style)
  "DOC",    # pydoclint (Args/Returns/Raises checks; needs preview)
  "ANN",    # flake8-annotations (type hints everywhere)
  "TID",    # flake8-tidy-imports (absolute imports: TID252)
  "UP",     # pyupgrade (modern syntax)
  "FA",     # future-annotations (auto `from __future__`; needs preview)
]

# Optional: stricter typing rules (discourage bare Any)
extend-select = ["ANN401"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
known-first-party = ["insanely_fast_whisper_rocm"]


[tool.ruff.lint.per-file-ignores]
# Temporarily ignore long-line checks in tests
"tests/**/*.py" = ["E501"]

# ------------------------------
#       Pytest & Coverage
# ------------------------------
[tool.pytest.ini_options]
# addopts = "-q --cov=insanely_fast_whisper_rocm --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html --cov-fail-under=85"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated;.*:DeprecationWarning",
]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark tests that hit real external integrations or slower paths",
]


[tool.coverage.run]
omit = [
    "*/__main__.py",
]
